--- a/index.html
+++ b/index.html
@@ -322,6 +322,10 @@
         // 数値を大きくするとプレイヤーへの反応が鋭くなり、小さくするとゆったり動きます
         const DRAGON_ACCELERATION = 0.2;
 
+        // --- 爆発エフェクト設定 (追加) ---
+        const EXPLOSION_SPEED_MAG = 2.0;  // 飛散スピードの倍率 (2.0で今の2倍)
+        const EXPLOSION_COUNT_MAG = 1.5;  // 破片の数の倍率 (1.5で今の1.5倍)
+
         // 武器・弾の設定 (定数化)
         const BULLET_SETTINGS = {
             PLAYER_SPEED: 32.0,  // 自機の弾速
@@ -742,44 +746,54 @@
                 };
                 enemies.push(e);
                 spawnedCount++;
-            } else if (type === 'tadpole') {
-                // ... (既存のコード) ...
-                let e = {
-                    x: x, y: y, vx: vx, vy: vy, hp: 1,
-                    speed: ENEMY_SPEEDS.TADPOLE * spd,
-                    color: '#f0f', type: 'tadpole', angle: 0, drop: 'none', scale: 0.6, history: []
-                };
-                enemies.push(e);
-                spawnedCount++;
-            } else { // Triangle
-                // ... (既存のコード: Triangleは少し長いので中略せずdropTypeだけ適用されていることを確認してください) ...
+            } else { // TRIANGLE (編隊生成ロジック)
                 const forms = ['V', 'line', 'circle'];
                 const form = forms[Math.floor(Math.random() * forms.length)];
+
                 const leader = {
-                    x: x, y: y, vx: vx, vy: vy, hp: 1, speed: ENEMY_SPEEDS.TRIANGLE * spd, color: '#d0f', type: 'triangle',
-                    angle: 0, drop: dropType, scale: 0.7, isLeader: true, followers: []
+                    x: x, y: y, vx: vx, vy: vy, hp: 1,
+                    speed: ENEMY_SPEEDS.TRIANGLE * spd,
+                    color: '#d0f', type: 'triangle', angle: Math.atan2(vy, vx), // 出現時の向きを固定
+                    drop: dropType, scale: 0.7,
+                    isLeader: true, followers: [],
+                    rotX: Math.random() * Math.PI,
+                    rotY: Math.random() * Math.PI,
+                    rotZ: Math.random() * Math.PI
                 };
                 enemies.push(leader);
                 spawnedCount++;
 
                 for (let i = 1; i <= 4; i++) {
-                    // ... (省略なし) ...
                     if (spawnedCount >= enemiesToSpawn) break;
+
                     let offX = 0, offY = 0;
+
                     if (form === 'V') {
-                        offX = (i % 2 === 0 ? 1 : -1) * Math.ceil(i / 2) * 25;
-                        offY = -Math.ceil(i / 2) * 25;
+                        // V字の幅と深さを定義
+                        const spreadX = 40; // 左右の間隔
+                        const depthY = -35; // 後方への下がり具合
+
+                        offX = (i % 2 === 0 ? 1 : -1) * Math.ceil(i / 2) * spreadX;
+                        offY = Math.ceil(i / 2) * depthY;
                     } else if (form === 'line') {
-                        offX = (i % 2 === 0 ? 1 : -1) * Math.ceil(i / 2) * 35;
+                        offX = (i % 2 === 0 ? 1 : -1) * Math.ceil(i / 2) * 45;
                         offY = 0;
-                    } else {
+                    } else { // circle
                         const angle = (Math.PI * 2 / 5) * i;
-                        offX = Math.cos(angle) * 35; offY = Math.sin(angle) * 35;
+                        offX = Math.cos(angle) * 40;
+                        offY = Math.sin(angle) * 40;
                     }
+
                     let e = {
-                        x: x, y: y, vx: vx, vy: vy, hp: 1, speed: ENEMY_SPEEDS.TRIANGLE * spd, color: '#d0f', type: 'triangle',
-                        angle: 0, drop: 'none', scale: 0.7,
-                        leader: leader, formOffset: { x: offX, y: offY }
+                        x: x + offX, y: y + offY, vx: vx, vy: vy, hp: 1,
+                        speed: ENEMY_SPEEDS.TRIANGLE * spd,
+                        color: '#d0f', type: 'triangle',
+                        angle: leader.angle, drop: 'none', scale: 0.7,
+                        leader: leader,
+                        formOffset: { x: offX, y: offY },
+                        rotX: Math.random() * Math.PI,
+                        rotY: Math.random() * Math.PI,
+                        rotZ: Math.random() * Math.PI
                     };
                     enemies.push(e);
                     leader.followers.push(e);
@@ -870,6 +884,11 @@
                 // 1. 移動・AIロジックの適用
                 if (e.leader && e.leader.hp > 0) {
                     updateFormationMovement(e); // 編隊移動
+                    if (e.type === 'triangle') {
+                        e.rotX += 0.08;
+                        e.rotY += 0.12;
+                        e.rotZ += 0.05;
+                    }
                 } else {
                     // 種類ごとの固有ロジック
                     switch (e.type) {
@@ -962,6 +981,11 @@
 
             e.x += e.vx; e.y += e.vy;
             e.angle = Math.atan2(e.vy, e.vx);
+
+            // --- 追加: 高速な立体回転 ---
+            e.rotX += 0.08;
+            e.rotY += 0.12;
+            e.rotZ += 0.05;
         }
 
         function updateCubeAI(e) {
@@ -978,11 +1002,30 @@
         /* --- ヘルパー・共通関数 --- */
 
         function updateFormationMovement(e) {
+            if (!e.leader || e.leader.hp <= 0) return;
+
+            // リーダーの現在の向き（角度）を取得
             const la = e.leader.angle;
-            const ox = e.formOffset.x * Math.cos(la) - e.formOffset.y * Math.sin(la);
-            const oy = e.formOffset.x * Math.sin(la) + e.formOffset.y * Math.cos(la);
-            e.x += (e.leader.x + ox - e.x) * 0.1;
-            e.y += (e.leader.y + oy - e.y) * 0.1;
+
+            // フォーメーションのオフセット座標をリーダーの向きに合わせて回転させる（回転行列）
+            // これにより、リーダーが旋回しても子機の相対位置が維持される
+            const rotatedOffX = e.formOffset.x * Math.cos(la) - e.formOffset.y * Math.sin(la);
+            const rotatedOffY = e.formOffset.x * Math.sin(la) + e.formOffset.y * Math.cos(la);
+
+            // ターゲットとなる絶対座標
+            const targetX = e.leader.x + rotatedOffX;
+            const targetY = e.leader.y + rotatedOffY;
+
+            // 線形補間（Lerp）ではなく、直接代入に近い強い追従を適用
+            // 0.1 を 0.3 程度に上げると、より「ガッチリ」固定されます
+            e.x += (targetX - e.x) * 0.3;
+            e.y += (targetY - e.y) * 0.3;
+
+            // 速度もリーダーに合わせる（分離ロジックによるガタつきを抑える）
+            e.vx = e.leader.vx;
+            e.vy = e.leader.vy;
+
+            // 向きもリーダーに同期
             e.angle = la;
         }
 
@@ -1190,7 +1233,12 @@
             ctx.save();
             ctx.beginPath(); ctx.rect(0, 0, worldSize, worldSize); ctx.clip();
 
-            ctx.strokeStyle = 'rgba(0, 255, 255, 0.4)'; ctx.lineWidth = 1.5; ctx.shadowBlur = 15; ctx.shadowColor = '#0ff'; ctx.beginPath();
+            ctx.strokeStyle = 'rgba(255, 255, 0, 0.4)';
+            ctx.lineWidth = 1;
+            ctx.shadowBlur = 15;
+            ctx.shadowColor = '#0ff';
+            ctx.beginPath();
+
             const viewX = camera.x; const viewY = camera.y;
             const viewW = width; const viewH = height;
 
@@ -1296,41 +1344,134 @@
         /**
          * レーザーの描画処理
          */
+   
+      
         function drawLasers() {
             lasers.forEach(l => {
                 ctx.save();
                 ctx.translate(l.x, l.y);
                 ctx.rotate(l.angle);
 
-                // 加算合成で光らせる
+                // 発光・加算合成設定
                 ctx.globalCompositeOperation = 'lighter';
-                ctx.shadowBlur = 20;
+                ctx.shadowBlur = 15;
                 ctx.shadowColor = '#0ff';
+                ctx.strokeStyle = '#0ff';
+                ctx.lineWidth = 1.5;
 
-                // ビーム本体
-                ctx.fillStyle = 'rgba(0, 255, 255, 0.8)';
                 const len = 2000;
-                // lifeに応じて細くなる演出
-                const w = l.width * (l.life / 5);
+                const segments = 20; // びりびりさせるための分割数
+                const segLen = len / segments;
+                const jitter = 15 * (l.life / 5); // 震えの幅（ライフに応じて減衰）
 
-                ctx.fillRect(0, -w / 2, len, w);
+                // 1. メインのびりびり線（ジグザグ）
+                ctx.beginPath();
+                ctx.moveTo(0, 0);
+                for (let i = 1; i <= segments; i++) {
+                    // Xは直線的に進み、Yをランダムに振る
+                    const px = i * segLen;
+                    const py = (Math.random() - 0.5) * jitter * 2;
+                    ctx.lineTo(px, py);
+                }
+                ctx.stroke();
 
-                // コア（白）
-                ctx.fillStyle = '#fff';
-                ctx.fillRect(0, -w / 4, len, w / 2);
+                // 2. 外側のワイヤーフレーム（上下の境界線）
+                // 上のライン
+                ctx.beginPath();
+                ctx.moveTo(0, -l.width / 4);
+                for (let i = 1; i <= segments; i++) {
+                    const px = i * segLen;
+                    const py = -l.width / 4 + (Math.random() - 0.5) * (jitter / 2);
+                    ctx.lineTo(px, py);
+                }
+                ctx.stroke();
+
+                // 下のライン
+                ctx.beginPath();
+                ctx.moveTo(0, l.width / 4);
+                for (let i = 1; i <= segments; i++) {
+                    const px = i * segLen;
+                    const py = l.width / 4 + (Math.random() - 0.5) * (jitter / 2);
+                    ctx.lineTo(px, py);
+                }
+                ctx.stroke();
+
+                // 3. 中心に白いコアの直線（時々ランダムで途切れる演出）
+                if (Math.random() > 0.2) {
+                    ctx.strokeStyle = '#fff';
+                    ctx.lineWidth = 1;
+                    ctx.beginPath();
+                    ctx.moveTo(0, 0);
+                    ctx.lineTo(len, (Math.random() - 0.5) * 5);
+                    ctx.stroke();
+                }
 
                 ctx.restore();
             });
-            ctx.globalCompositeOperation = 'source-over'; // 戻す
+            ctx.globalCompositeOperation = 'source-over';
             ctx.shadowBlur = 0;
         }
 
+        /**
+                 * TRIANGLE（三角錐ワイヤーフレーム版）の描画処理
+                 */
         function drawTriangleEnemy(ctx, e) {
-            ctx.save(); ctx.translate(e.x, e.y); ctx.rotate(e.angle); ctx.scale(e.scale * G_SCALE, e.scale * G_SCALE);
-            ctx.strokeStyle = e.color; ctx.lineWidth = 2;
-            ctx.shadowBlur = 10; ctx.shadowColor = e.color;
-            ctx.beginPath(); ctx.moveTo(15, 0); ctx.lineTo(-10, 10); ctx.lineTo(-10, -10); ctx.closePath();
-            ctx.stroke(); ctx.shadowBlur = 0; ctx.restore();
+            ctx.save();
+            ctx.translate(e.x, e.y);
+            ctx.scale(e.scale * G_SCALE, e.scale * G_SCALE);
+            ctx.strokeStyle = e.color;
+            ctx.lineWidth = 1.5;
+            ctx.shadowBlur = 10;
+            ctx.shadowColor = e.color;
+
+            // 三角錐（正四面体）の頂点データ
+            const size = 15;
+            const pts = [
+                { x: 1, y: 1, z: 1 },
+                { x: -1, y: -1, z: 1 },
+                { x: -1, y: 1, z: -1 },
+                { x: 1, y: -1, z: -1 }
+            ];
+
+            // 3軸回転行列の適用
+            const cosX = Math.cos(e.rotX), sinX = Math.sin(e.rotX);
+            const cosY = Math.cos(e.rotY), sinY = Math.sin(e.rotY);
+            const cosZ = Math.cos(e.rotZ), sinZ = Math.sin(e.rotZ);
+
+            const proj = pts.map(p => {
+                // X軸回転
+                let y1 = p.y * cosX - p.z * sinX;
+                let z1 = p.y * sinX + p.z * cosX;
+                // Y軸回転
+                let x2 = p.x * cosY + z1 * sinY;
+                let z2 = -p.x * sinY + z1 * cosY;
+                // Z軸回転
+                let x3 = x2 * cosZ - y1 * sinZ;
+                let y3 = x2 * sinZ + y1 * cosZ;
+
+                return { x: x3 * size, y: y3 * size };
+            });
+
+            // 三角錐のエッジ（全ての頂点同士を繋ぐ 6本の線）
+            const lines = [
+                [0, 1], [0, 2], [0, 3],
+                [1, 2], [1, 3], [2, 3]
+            ];
+
+            ctx.beginPath();
+            lines.forEach(l => {
+                ctx.moveTo(proj[l[0]].x, proj[l[0]].y);
+                ctx.lineTo(proj[l[1]].x, proj[l[1]].y);
+            });
+            ctx.stroke();
+
+            // 中心にコアを描画
+            ctx.fillStyle = '#fff';
+            ctx.beginPath();
+            ctx.arc(0, 0, 2, 0, Math.PI * 2);
+            ctx.fill();
+
+            ctx.restore();
         }
 
         function drawCubeEnemy(ctx, e) {
@@ -1426,14 +1567,23 @@
         }
         
         function createExplosion(x, y, c, n) {
-            for (let i = 0; i < n; i++) {
+            // 生成する破片の総数を倍率で増やす
+            const count = Math.floor(n * EXPLOSION_COUNT_MAG);
+
+            for (let i = 0; i < count; i++) {
                 const angle = Math.random() * Math.PI * 2;
-                const speed = Math.random() * 5 + 2;
+
+                // 飛散スピードを倍率で強化
+                // Math.random() * 5 + 2 (基本) に対して EXPLOSION_SPEED_MAG を乗算
+                const speed = (Math.random() * 5 + 2) * EXPLOSION_SPEED_MAG;
+
                 particles.push({
                     x, y,
                     vx: Math.cos(angle) * speed,
                     vy: Math.sin(angle) * speed,
-                    color: c, life: 1.0
+                    color: c,
+                    // 遠くまで飛ぶようにライフ（消えるまでの時間）を少し長めに設定(1.0 -> 1.2)
+                    life: 1.2
                 });
             }
         }
