--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         <h1 style="color:#0ff; font-size:40px; margin-bottom:40px; text-shadow:0 0 20px #0ff; text-align:center;">NEON GRAVITY<br><span style="font-size:20px;color:#fff;">DEBUGGED</span></h1>
         <div class="menu-btn" id="btn-start">START GAME</div>
         <div class="menu-btn" id="btn-ost">SOUNDTRACK</div>
-        <div style="font-size:12px;color:#888;margin-top:20px;">PC: [Z] Bomb<br>MOBILE: Small Button to Bomb</div>
+        <div style="font-size:12px;color:#888;margin-top:20px;">PC: [X] Bomb<br>MOBILE: Small Button to Bomb</div>
     </div>
 
     <div id="ost-ui">
@@ -550,7 +550,9 @@
         }
 
         function startStage() {
-            enemiesToSpawn = 40 + (stage * 15);
+            // 現在の計算式: 基礎40体 + (ステージ数 × 15体)
+            enemiesToSpawn = 70 + (stage * 15);
+
             spawnedCount = 0; isStageClear = false; killCount = 0;
             ui.msg.style.display = 'none';
             bullets = []; lasers = []; enemies = []; enemyBullets = []; crystals = []; missiles = []; powerups = []; wormholes = []; scorePopups = []; rings = [];
@@ -613,7 +615,7 @@
             if ((input.aim.active || input.keys['Space'] || input.keys['KeyZ']) && frame % fireInterval === 0) fire();
 
             // Wormholes Logic
-            const maxWormholes = 3 + stage;
+            const maxWormholes = 5 + stage;
 
             if (spawnedCount < enemiesToSpawn && wormholes.filter(w => w.active).length < maxWormholes && Math.random() < 0.03) {
                 spawnWormhole();
@@ -622,12 +624,21 @@
             wormholes.forEach((w) => {
                 w.life--;
                 if (w.active) {
+                    // 現在の設定: 180フレーム（約3秒）に1回
                     if (w.life > 60 && w.life % 180 === 0 && spawnedCount < enemiesToSpawn) {
                         const r = Math.random();
-                        if (r < 0.20) spawnEnemy(w.x, w.y, 'dragon');
-                        else if (r < 0.40) spawnEnemy(w.x, w.y, 'cube');
-                        else if (r < 0.60) spawnEnemy(w.x, w.y, 'tadpole');
-                        else spawnEnemy(w.x, w.y, 'triangle');
+      
+
+                        // --- 修正後（TADPOLE激増パターン） ---
+                        if (r < 0.20) {
+                            spawnEnemy(w.x, w.y, 'dragon'); // 20% (ボスは少し減らす)
+                        } else if (r < 0.35) {
+                            spawnEnemy(w.x, w.y, 'cube');   // 15% (アイテム持ち)
+                        } else if (r < 0.65) {
+                            spawnEnemy(w.x, w.y, 'tadpole');// 30% (アイテム持ち)
+                        } else {
+                            spawnEnemy(w.x, w.y, 'triangle'); // 残り35%
+                        }
                     }
                     if (w.life <= 0) w.active = false;
                     const dx = player.x - w.x; const dy = player.y - w.y;
@@ -1618,16 +1629,29 @@
         /**
                  * TRIANGLE（三角錐ワイヤーフレーム版）の描画処理
                  */
+        /**
+                 * TRIANGLE（三角錐ワイヤーフレーム版）の描画処理
+                 * ネオンのような強い発光表現に強化
+                 */
         function drawTriangleEnemy(ctx, e) {
             ctx.save();
             ctx.translate(e.x, e.y);
             ctx.scale(e.scale * G_SCALE, e.scale * G_SCALE);
-            ctx.strokeStyle = e.color;
-            ctx.lineWidth = 1.5;
-            ctx.shadowBlur = 10;
+
+            // --- ネオン効果の強化 ---
+            // 1. 加算合成: 背景の黒に色が加算され、発光しているように見える
+            ctx.globalCompositeOperation = 'lighter';
+
+            ctx.strokeStyle = e.color; // 色は元のまま (#d0f)
+
+            // 2. 線の太さ: 光の量を増やすため少し太くする
+            ctx.lineWidth = 2.5;
+
+            // 3. グロー効果: 光の滲みを強く、広くする
+            ctx.shadowBlur = 25;
             ctx.shadowColor = e.color;
 
-            // 三角錐（正四面体）の頂点データ
+            // --- 以下、3D計算と描画ロジック ---
             const size = 15;
             const pts = [
                 { x: 1, y: 1, z: 1 },
@@ -1636,26 +1660,20 @@
                 { x: 1, y: -1, z: -1 }
             ];
 
-            // 3軸回転行列の適用
             const cosX = Math.cos(e.rotX), sinX = Math.sin(e.rotX);
             const cosY = Math.cos(e.rotY), sinY = Math.sin(e.rotY);
             const cosZ = Math.cos(e.rotZ), sinZ = Math.sin(e.rotZ);
 
             const proj = pts.map(p => {
-                // X軸回転
                 let y1 = p.y * cosX - p.z * sinX;
                 let z1 = p.y * sinX + p.z * cosX;
-                // Y軸回転
                 let x2 = p.x * cosY + z1 * sinY;
                 let z2 = -p.x * sinY + z1 * cosY;
-                // Z軸回転
                 let x3 = x2 * cosZ - y1 * sinZ;
                 let y3 = x2 * sinZ + y1 * cosZ;
-
                 return { x: x3 * size, y: y3 * size };
             });
 
-            // 三角錐のエッジ（全ての頂点同士を繋ぐ 6本の線）
             const lines = [
                 [0, 1], [0, 2], [0, 3],
                 [1, 2], [1, 3], [2, 3]
@@ -1668,10 +1686,11 @@
             });
             ctx.stroke();
 
-            // 中心にコアを描画
+            // 中心のコアも強く光らせる
+            ctx.shadowBlur = 35;
             ctx.fillStyle = '#fff';
             ctx.beginPath();
-            ctx.arc(0, 0, 2, 0, Math.PI * 2);
+            ctx.arc(0, 0, 3, 0, Math.PI * 2);
             ctx.fill();
 
             ctx.restore();
@@ -1783,17 +1802,17 @@
                 let color;
                 const rnd = Math.random();
 
-                if (rnd < 0.5) {
-                    // 50%：その敵のベースカラー
+                if (rnd < 0.7) {
+                    // 70%：その敵のベースカラー
                     color = baseColor;
-                } else if (rnd < 0.7) {
-                    // 20%：白（中心のまばゆい輝き）
+                } else if (rnd < 0.8) {
+                    // 10%：白（中心のまばゆい輝き）
                     color = '#fff';
-                } else if (rnd < 0.85) {
-                    // 15%：オレンジや黄色（燃焼する火花）
+                } else if (rnd < 0.90) {
+                    // 10%：オレンジや黄色（燃焼する火花）
                     color = rnd < 0.77 ? '#ff8800' : '#ffff00';
                 } else {
-                    // 15%：完全にランダムなネオンカラー（サイバー感を強調）
+                    // 10%：完全にランダムなネオンカラー（サイバー感を強調）
                     const colors = ['#0ff', '#f0f', '#0f0', '#ff0'];
                     color = colors[Math.floor(Math.random() * colors.length)];
                 }
